# python-pg

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  README_WEBWORK_FRONTEND.md  ROBUST_FRAMEWORK_GUIDE.md  WEBWORK_FRONTEND_SETUP.md  docker-compose.yml  pg_solve.py  pyproject.toml  start-webwork.sh
.claude/: settings.local.json
pg/: __init__.py  answermacros.py  basicmacros.py  course.py  graphmacros.py  mathobjects.py  parser_checkboxList.py  parser_graphTool.py  parser_multiAnswer.py  parser_popUp.py  parser_radioButtons.py  pg.py  standard.py
pg/answer/: __init__.py  answer_hash.py  cmp.py  evaluator.py  graders.py
pg/macros/: MathObjects.py  PG.py  PGML.py  PGanswermacros.py  PGbasicmacros.py  PGstandard.py  README.md  __init__.py  contexts.py  registry.py  statistics.py
pg/math/: __init__.py  answer_checker.py  collections.py  compute.py  context.py  formula.py  formula_base.py  formula_enhanced.py  formula_up_to_constant.py  fraction.py  geometric.py  limited_polynomial.py  numeric.py  sets.py  (+2 more)
snippets/: answer_help_basic.pg  choice_checkbox.pg  choice_multiple_choice.pg  course_basic.pg  fraction_basic.pg  fraction_mixed.pg  graph_basic.pg  integration_complex.pg  integration_realistic.pg  mathobjects_formula.pg  mathobjects_intervals.pg  mathobjects_vectors.pg  multianswer_basic.pg  pgml_answer_blanks.pg  pgml_formatting.pg  pgml_inline_math.pg  popup_basic.pg  random_numbers.pg  standard_basic.pg  standard_modes.pg  standard_solution.pg
tests/: conftest.py  test_patterns_template.py
webwork-frontend/: Dockerfile.dev  index.html  package.json
webwork_api/: .env.example  README.md  main.py  main_v2.py  pytest.ini  requirements_v2.txt
(+181 files in other folders)
