[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg"
version = "0.1.0"
description = "WeBWorK Problem Generation System"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "RestrictedPython>=6.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0.0",
    "mypy>=1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
pg-convert = "pg.translator.cli:main"

[tool.setuptools]
packages = [
    "pg",
    "pg.parser",
    "pg.math",
    "pg.answer",
    "pg.pgml",
    "pg.macros",
    "pg.translator",
    "pg.renderer",
]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"pg" = ["py.typed"]
"pg.parser" = ["py.typed"]
"pg.math" = ["py.typed"]
"pg.answer" = ["py.typed"]
"pg.pgml" = ["py.typed"]
"pg.macros" = ["py.typed"]
"pg.translator" = ["py.typed"]
"pg.renderer" = ["py.typed"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["pg"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
